--- a/index.ipynb
+++ b/index.ipynb
@@ -2049,7 +2049,7 @@
    "outputs": [],
    "source": [
     "area_values = \n",
-    "x_area = [cities[0][''], cities[1]['City'], cities[2]['City']]\n",
+    "x_area = [cities[0]['Area'], cities[1]['City'], cities[2]['City']]\n",
     "y_area =\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [], 'y': [], 'text': []}"
