--- a/index.ipynb
+++ b/index.ipynb
@@ -2052,7 +2052,7 @@
     "x_area = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "y_area =\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': [], 'y': [], 'text': []}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
   {
