Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2051,7 +2051,7 @@
     "area_values = \n",
     "x_area = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "y_area =\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': []}\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': [area_]}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
