--- a/index.ipynb
+++ b/index.ipynb
@@ -2049,8 +2049,8 @@
    "outputs": [],
    "source": [
     "area_values = \n",
-    "x_area = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "y_area =\n",
+    "x_area = \n",
+    "y_area = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': [area_values]}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
