Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2048,7 +2048,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "area_values = \n",
+    "area_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "x_area = \n",
     "y_area = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': [area_values]}\n",
